--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,6 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_NUMBER=
 
-MAIL_DOMAIN = sandboxRANDOMSTRING.mailgun.org
+MAIL_DOMAIN = Sandbox mail domain from Mailgun, should be somthing like: sandboxRANDOMSTRING.mailgun.org
 
 DOMAIN = localhost:9292 or your actual domain once deployed. Used in links in messages sent to users.
